feat: enhance SEO and meta tags
- Add comprehensive meta description with keywords
- Improve Open Graph tags for better social sharing
- Add Twitter Card meta tags
- Add canonical URL and theme color
- Optimize title for DevOps engineering focus

--- a/index.html
+++ b/index.html
@@ -4,15 +4,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Monzur Elahi Shamim - DevOps Portfolio</title>
-    <meta name="description" content="DevOps Engineer Portfolio - Monzur Elahi Shamim" />
+    <title>Monzur Elahi Shamim - DevOps Engineer Portfolio</title>
+    <meta name="description" content="Aspiring DevOps Engineer with 6 months experience in containerization, cloud infrastructure, and automation. Specialized in Docker, AWS, and data platform engineering." />
     <meta name="author" content="Monzur Elahi Shamim" />
+    <meta name="keywords" content="DevOps, Docker, AWS, Cloud Infrastructure, Containerization, Automation, Portfolio, Software Engineer, TimescaleDB, PostgreSQL" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="#000000" />
 
-    <meta property="og:title" content="shamim-devops-portfolio" />
-    <meta property="og:description" content="DevOps Engineer Portfolio - Monzur Elahi Shamim" />
+    <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-domain.com/" />
+    <meta property="og:title" content="Monzur Elahi Shamim - DevOps Engineer Portfolio" />
+    <meta property="og:description" content="Aspiring DevOps Engineer with hands-on experience in containerization, cloud infrastructure, and automation." />
+    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:site_name" content="Monzur Elahi Shamim Portfolio" />
 
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://your-domain.com/" />
+    <meta name="twitter:title" content="Monzur Elahi Shamim - DevOps Engineer Portfolio" />
+    <meta name="twitter:description" content="Aspiring DevOps Engineer with hands-on experience in containerization, cloud infrastructure, and automation." />
+    <meta name="twitter:image" content="/og-image.jpg" />
+
+    <!-- Additional SEO -->
+    <link rel="canonical" href="https://your-domain.com/" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
   </head>
 
   <body>
