--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://monzurs.me/shamim-devops-portfolio/" />
+    <meta property="og:url" content="https://monzurs.me/" />
     <meta property="og:title" content="Monzur Elahi Shamim - DevOps Engineer Portfolio" />
     <meta property="og:description" content="Aspiring DevOps Engineer with hands-on experience in containerization, cloud infrastructure, and automation." />
-    <meta property="og:image" content="https://monzurs.me/shamim-devops-portfolio/profile-photo.jpg" />
+    <meta property="og:image" content="https://monzurs.me/profile-photo.jpg" />
     <meta property="og:site_name" content="Monzur Elahi Shamim Portfolio" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://monzurs.me/shamim-devops-portfolio/" />
+    <meta name="twitter:url" content="https://monzurs.me/" />
     <meta name="twitter:title" content="Monzur Elahi Shamim - DevOps Engineer Portfolio" />
     <meta name="twitter:description" content="Aspiring DevOps Engineer with hands-on experience in containerization, cloud infrastructure, and automation." />
-    <meta name="twitter:image" content="https://monzurs.me/shamim-devops-portfolio/profile-photo.jpg" />
+    <meta name="twitter:image" content="https://monzurs.me/profile-photo.jpg" />
 
     <!-- Additional SEO -->
-    <link rel="canonical" href="https://monzurs.me/shamim-devops-portfolio/" />
+    <link rel="canonical" href="https://monzurs.me/" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
